--- a/views/newitem/support.ejs
+++ b/views/newitem/support.ejs
@@ -119,13 +119,16 @@
                                         <div class="uploadBtn" @click="queryFile"
                                              style="margin-left:0;line-height: 39px;">快速查询
                                         </div>
+                                        <div class="uploadBtn" @click="test"
+                                             style="margin-left:0;line-height: 39px;">测试更新文件库
+                                        </div>
                                     </div>
                                     <div class="contentbox col-xs-9">
                                         <div class="item w640" transition="onehalf" v-show="showFile">
                                             <div class="document-content">
                                                 <ul>
-                                                    <li>calibration_2cam.xml</li>
-                                                    <li>camera.xml</li>
+                                                    <li><a>{{supportObj.calibration_2cam_xml_name}}</a></li>
+                                                    <li><a>{{supportObj.camera_xml_name}}</a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -166,22 +169,39 @@
             //count: 1,
             showFile: false,
             showFileNotFound: false,
-            cameraId: ""
+            cameraId: "",
+            supportObj: []
         },
         methods: {
             hide: function () {
                 this.showqrtoast = false;
             },
             queryFile: function () {
-                var data = {
+                let data = {
                     cameraId: this.cameraId
                 };
-                $.post('/support/queryFile', data, function (r) {
+                let _this = this;
+                $.post('/supportitem/queryFile', data, function (r) {
                     if (r.code != 0) {
-                        alert(r.msg);
+                        //alert(r.msg);
+                        _this.showFileNotFound = true;
+                        _this.showFile = false;
                         return;
+                    } else {
+                        _this.showFile = true;
+                        _this.showFileNotFound = false;
+                        _this.supportObj = r.supportObj;
+                        console.log(_this.result);
                     }
-                    //location.reload();
+                });
+            },
+            test: function () {
+                $.post('/supportitem/test', null, function (r) {
+                    if (r.code != 0) {
+
+                    } else {
+
+                    }
                 });
             }
         }
