优化了下载全景图功能, 当用户下载不存在服务器上的全景图时, 自动跳转到正确的下载链接

--- a/views/newitem/edit.ejs
+++ b/views/newitem/edit.ejs
@@ -1540,7 +1540,7 @@
                         location.href = 'http://qncdn.sz-sti.com/pano/'+this.scenes[index].key.split('_')[0]+'.jpg?download';
                     }else{
 
-                    scene.type==6 || scene.type==9 || scene.type==5 || scene.key.split('_')[0].length == 10 ? location.href = '/newitem/download/pano/'+scene.key.split('_')[0]+'?name='+scene.name : location.href = '<%=cdnImagesPath%>/scenes/'+this.scenes[index].key.split('_')[0]+'/allinone.jpg?download';
+                    scene.type==6 || scene.type==9 || scene.type==5 || scene.key.split('_')[0].length == 10 ? location.href = '/newitem/download/pano/'+scene.key.split('_')[0]+'?name='+scene.name+'&type='+scene.type : location.href = '<%=cdnImagesPath%>/scenes/'+this.scenes[index].key.split('_')[0]+'/allinone.jpg?download';
                     }
                 },
                 setcover: function(i){
